Update analytics and add social links

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,8 @@ theme: jekyll-theme-slate
 title: Matt Bell
 google_analytics: G-Z0PZZDZ6JZ
 show_downloads: false
+social:
+  twitter: mbell88
+  instagram: mbelly88
+  linkedin: matt-bell-18126341
+  github: bellmatt
