--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://mattbell.dev"
 # Author Settings
 author: Matt Bell
 author-img: cover-photo.jpg
-about-author: Software Engineer
+about-author: Software Engineering, DevOps, Observability, SRE
 
 social:
   twitter: mbell88
