--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: '0.147.8'
-          # extended: true
+          hugo-version: '0.147.9'
+          extended: true
 
       - name: Build
         run: hugo --minify
